# boids-sdk

./: .gitignore  README.md  install.sh
go/: client.go  go.mod
go/cmd/boids/: main.go
js/: README.md  package.json
js/src/: index.d.ts  index.js
python/: README.md  pyproject.toml
python/boids/: __init__.py  cli.py  client.py
test/: go.mod  go_chat_complete.go  go_response.go  js_chat_complete.mjs  js_response.mjs  python_chat_complete.py  python_response.py  run_chat_complete_tests.ps1  run_tests.ps1  run_tests.sh
